<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:padding="10dip">
		<TextView
			android:id="@+id/title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:text="@string/title"/>
		<EditText
			android:id="@+id/title_value"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:inputType="textCapSentences"
			android:layout_below="@id/title"/>
		<TextView
			android:id="@+id/description"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:text="@string/description"
			android:layout_below="@id/title_value"/>
		<EditText
			android:id="@+id/description_value"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:singleLine="false"
			android:layout_below="@id/description"
			android:lines="3" 
			android:gravity="top|left" 
			android:inputType="textMultiLine"
			android:scrollHorizontally="false"/>
		<Button 
			android:id="@+id/duedate_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:layout_below="@id/description_value"
			android:onClick="showDatePickerDialog"/>
		<CheckBox
			android:id="@+id/isduedate_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:text="@string/duedate"
			android:layout_below="@id/duedate_value"
			android:onClick="toggleDuedateCheckbox"/>
		<CheckBox
			android:id="@+id/isdone_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:text="@string/isdone"
			android:layout_below="@id/isduedate_value"/>
		<Button
			android:id="@+id/save"
			android:text="@string/save"
			android:onClick="save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/isdone_value"
			android:layout_centerHorizontal="true"/>
		<Button
			android:id="@+id/exit"
			android:text="@string/exit"
			android:onClick="exit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/isdone_value"
			android:layout_toRightOf="@id/save"/>
		<Button
			android:id="@+id/delete"
			android:text="@string/delete"
			android:onClick="delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/isdone_value"
			android:layout_toLeftOf="@id/save"/>
	</RelativeLayout>
</ScrollView>
